cabal-version:      2.4
name:               HaskellMarkUp
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: Write HTML with Haskell

-- A longer description of the package.
description: This is a pointless haskell lib that alows you to write html from haskell. 
             I think it could be useful for making static site generators in haskell. 
             For now it doesn't have the many tags supported

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
license: GPL-3.0-or-later
author:             rhl120
maintainer:         rhl120@protonmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Hmarkup.Tags, Hmarkup.Generator

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0, text
    hs-source-dirs:   src
    default-language: Haskell2010
